# tewi

./: .gitignore  CHANGELOG.md  CONVENTIONS.md  MANIFEST.in  Makefile  README.md  app.py  app.tcss  pyproject.toml  ruff.toml
.claude/: CLAUDE.md
.github/: dependabot.yml
.github/workflows/: check.yml  python-package.yml  release.yml  stale.yml
docker/: docker-compose.yml  init-torrents.sh  magnets.txt
package/: extract-changelog.sh
package/flatpak/: io.github.anlar.tewi.desktop  io.github.anlar.tewi.metainfo.xml  io.github.anlar.tewi.yml
src/tewi/: __init__.py  app.py  app.tcss  common.py  config.py  message.py  version.py
src/tewi/search/: __init__.py  base.py  manager.py  models.py  util.py
src/tewi/search/providers/: __init__.py  bitmagnet.py  jackett.py  nyaa.py  prowlarr.py  torrentscsv.py  torrentz2.py  tpb.py  yts.py
src/tewi/service/: __init__.py  base_client.py  client.py  client_factory.py  deluge_client.py  qbittorrent_client.py  transmission_client.py
src/tewi/service/search/: __init__.py  base_provider.py  common.py  jackett_provider.py  nyaa_provider.py  prowlarr_provider.py  search.py  torrentscsv_provider.py  tpb_provider.py  yts_provider.py
src/tewi/torrent/: base.py  factory.py  models.py  util.py
src/tewi/torrent/clients/: deluge.py  qbittorrent.py  transmission.py
src/tewi/ui/: messages.py  models.py  util.py
src/tewi/ui/dialog/: confirm.py  help.py  preferences.py  statistics.py  torrent_details.py  websearch_query.py
src/tewi/ui/panel/: details.py  info.py  list.py  listview.py  state.py  websearch.py
src/tewi/ui/widget/: common.py  torrent_item.py
src/tewi/util/: __init__.py  clipboard.py  data.py  debug.py  decorator.py  geoip.py  log.py  misc.py  print.py
tests/: conftest.py  test_category_detection.py  test_config.py  test_geoip.py  test_search_providers_integration.py  test_util_misc.py  test_util_print.py
tests/search/: test_category_detection.py
tests/search/providers/: test_search_providers_integration.py
tests/tewi/search/: test_search_util.py
tests/tewi/search/providers/: test_providers.py
tests/tewi/torrent/: test_base.py  test_factory.py  test_torrent_util.py
tests/tewi/torrent/clients/: test_transmission.py
tests/tewi/ui/: test_util.py  test_util_data.py  test_util_print.py
tests/tewi/util/: test_clipboard.py  test_geoip.py  test_log.py  test_misc.py
tests/util/: test_data.py
(+12 files in other folders)
